# ParallelPrefixSum

./: .gitmodules  CMakeLists.txt  build_and_run.ps1
shader/: clean_up.comp  clear_buffer.comp  prefix_sum.comp
src/: main.cpp
